# training_mlops

./: .coveragerc  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: Bug.md  CR_Workshop.md  Project_Comittee.md  Task.md
.gitlab/issue_templates/: Bug.md  Project_Comittee.md  Task.md
app/: api_demo.py  app_demo.py
docs/cao_tri_do_marvelous_mlops_training/: .gitignore  .gitlab-ci.yml  Makefile  README.md  conf.py  index.rst  requirements.txt
docs/cao_tri_do_marvelous_mlops_training/.github/workflows/: documentation.yaml
docs/cao_tri_do_marvelous_mlops_training/docs/sphinx_quickstart/: file_organisation.rst  index.rst  md_cheatsheet.md  mermaid_syntax_demo.rst  sphinx_quickstart.rst
src/: main_script.py
src/cao_tri_do_marvelous_mlops_training/: cli_main_script.py
